# ss_splitter

./: CMakeLists.txt  README.md  package.xml
launch/: splitter_launch.launch
src/: splitter.cpp
